syntax = "proto3";

option go_package = "github.com/my-crazy-lab/this-is-grpc/authentication/proto/account";

package grpc.account;

message AccountRequest {
  string phoneNumber = 1;
  string password = 2;
}

message AccountResponse {
  string token = 1;
}

service Account {
  rpc Login(AccountRequest) returns (AccountResponse) {}
}